# Deep-Learning-and-Computer-Vision-for-Point-Clouds

./: .gitattributes  .gitignore  README.md  pyproject.toml
ModelGenerator/: Action_pointnetlk.py  Settings_pointnetlk.py  Trainer_pointnetlk.py  Utils_pointnetlk.py  train_pointnetlk.py  train_pointnetsegmenter.py
ModelGenerator/PointNetLK/: __init__.py  invmat.py  pointnet.py  pointnet_classifier.py  pointnet_segmenter.py  pointnetlk.py  se3.py  sinc.py  so3.py
ModelNet10/: PointCloudExtractor.py  main.py
Princeton3DMatchDataGenerator/: PointCloudExtractor.py  RegistrationPipeline.py  TransformationEstimator.py  main.py
SimpleITK/: non-rigid_registration.py  rigid_registration.py
scripts/: check_mat.py  check_npz.py  encoding_patterns.py  failure_cnn.py  failure_cnn_1.py  failure_cnn_2.py  generate_call_graphs.py  generate_call_stacks.py  generate_patterns.py  marching_patterns.py  pareto_chart.py  print_keys.py  show_and_tell.py  test_npz.py  visualize_deformation_patterns.py  visualize_fpfh.py
