[tool.poetry]
name = "pointnetlk_registration"
version = "0.1.0"
description = "A project for point cloud registration using PointNetLK."
authors = ["Saumik Dana"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
scipy = "^1.5"
matplotlib = "^3.1"
h5py = "^3.1"
open3d = "*"
scikit-learn = "*"
PyYAML = "*"
addict = "*"
pandas = "*"
tqdm = "*"
gdown = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
